Criando a classe category com seu primeiro end-point

--- a/criandoProjeto.html
+++ b/criandoProjeto.html
@@ -34,28 +34,11 @@
                 Esse plug-in evita erro de compatibilidade.
             </p>
             <h2><strong>Iniciando Projeto no git</strong></h2>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            
-
+            <p>Depois de criar o repositório no github e fazer o push. Basta verificar se está tudo ok no navegador
+                usando localhost:8080.
+                <img src="imagens/msgSpring.png" alt="springInitializr">
+                Se aparecer essa mensagem é pq está tudo ok!
+            </p>
         </div>
     </main>
     <footer class="rodape">
