--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <div class="modulo vermelho">
                     <h3>modulo 02 | DSCatalog-JAVA</h3>
                     <ul>
-                        <li><a href="criandoProjeto.html">criando-Projeto</a></li>
-                        <li><a href="#">Exercício B</B></a></li>
+                        <li><a href="criandoProjeto.html">Criando-Projeto</a></li>
+                        <li><a href="entidades.html">Classe Category</B></a></li>
                         <li><a href="#">Exercício C</a></li>
                     </ul>
                 </div>
