--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     </ul>
                 </div>
                 <div class="modulo vermelho">
-                    <h3>modulo 02 - Básico</h3>
+                    <h3>modulo 02 | DSCatalog-JAVA</h3>
                     <ul>
-                        <li><a href="#">Exercício A</a></li>
+                        <li><a href="criandoProjeto.html">criando-Projeto</a></li>
                         <li><a href="#">Exercício B</B></a></li>
                         <li><a href="#">Exercício C</a></li>
                     </ul>
