--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <ul>
                         <li><a href="criandoProjeto.html">Criando-Projeto</a></li>
                         <li><a href="entidades.html">Classe Category</B></a></li>
-                        <li><a href="#">Exercício C</a></li>
+                        <li><a href="camadas.html">Estrutura de camadas</B></a></li>
+                        <li><a href="bancoH2.html">Banco de dados H2</B></a></li>
                     </ul>
                 </div>
                 <div class="modulo azul">
