update from project

--- a/basico/conceitos_basico.html
+++ b/basico/conceitos_basico.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets\css\estilo.css">
-    <link rel="stylesheet" href="assets\css\exercicio.css">
+    <link rel="stylesheet" href="../assets/css/exercicio.css">
+    <link rel="stylesheet" href="../assets\css\estilo.css">
     <title>Exercício</title>
 </head>
 <body class="exercicio">
     <header class="cabecalho">
+
         <h1>Guia JAVA</h1>
         <h2>Visualização do Conteúdo</h2>
     </header> 
     <nav class="navegacao">
         <a href="forech.html" class="verde">Forech</a>
-        <a href="index.html" class="vermelho">Voltar</a>
+        <a href="../index.html" class="vermelho">Voltar</a>
     </nav> 
     <main class="principal">
         <div class="conteudo">
 
             <div class="titulo">Scanner & Locale</div>
-            <p><img src="imagens/Scanner_Locale.png" alt="Imagem do conteudo"></p>
+            <p><img src="../imagens/Scanner_Locale.png" alt="Imagem do conteudo"></p>
 
             <p><strong>Locale.setDefault(Locale.US);</strong><br>
             Usamos essa sentença para padronizar o uso de . como separador decimal.</p>
