--- a/dscatalog/camadas.html
+++ b/dscatalog/camadas.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets\css\estilo.css">
-    <link rel="stylesheet" href="assets\css\exercicio.css">
+    <link rel="stylesheet" href="../assets\css\estilo.css">
+    <link rel="stylesheet" href="../assets\css\exercicio.css">
     <title>Exercício</title>
 </head>
 <body class="exercicio">
@@ -14,12 +14,12 @@
     </header> 
     <nav class="navegacao">
         <a href="#" class="verde">Sem Formatação</a>
-        <a href="index.html" class="vermelho">Voltar</a>
+        <a href="../index.html" class="vermelho">Voltar</a>
     </nav> 
     <main class="principal">
         <div class="conteudo">
             <div class="titulo">Modelo de camadas</div>
-            <img src="imagens/camadas.png" alt="classe java">
+            <img src="../imagens/camadas.png" alt="classe java">
             <p>
                        
                 O modelo de camadas é uma abordagem arquitetônica comum em desenvolvimento de software que organiza uma aplicação em diferentes 
