--- a/dscatalog/criandoProjeto.html
+++ b/dscatalog/criandoProjeto.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets\css\estilo.css">
-    <link rel="stylesheet" href="assets\css\exercicio.css">
+    <link rel="stylesheet" href="../assets\css\estilo.css">
+    <link rel="stylesheet" href="../assets\css\exercicio.css">
     <title>Exercício</title>
 </head>
 <body class="exercicio">
@@ -14,7 +14,7 @@
     </header> 
     <nav class="navegacao">
         <a href="#" class="verde">Sem Formatação</a>
-        <a href="index.html" class="vermelho">Voltar</a>
+        <a href="../index.html" class="vermelho">Voltar</a>
     </nav> 
     <main class="principal">
         <div class="conteudo">
@@ -22,7 +22,7 @@
             <div class="titulo">Criando o projeto</div>
             <h2><strong>Acessando o Spring Initializr</strong></h2>
             <p>Após acessar o site do Spring Initializr, segue a imagem de configuração que pode mudar dependendo do seu projeto,
-               <img src="imagens/spring.png" alt="springInitializr">
+               <img src="../imagens/spring.png" alt="springInitializr">
             </p>
             <p>Após gerar o projeto você recebera um download do arquivo que você precisa descompactar na pasta de sua preferência,
                 a seguir abra a pasta na sua IDEA. <br>
@@ -30,13 +30,13 @@
                 
                 <h3>Plug-in do Maven para evitar erro no pom.xml</h3>
 
-                <img src="imagens/pluginMaven.png" alt="springInitializr">
+                <img src="../imagens/pluginMaven.png" alt="springInitializr">
                 Esse plug-in evita erro de compatibilidade.
             </p>
             <h2><strong>Iniciando Projeto no git</strong></h2>
             <p>Depois de criar o repositório no github e fazer o push. Basta verificar se está tudo ok no navegador
                 usando localhost:8080.
-                <img src="imagens/msgSpring.png" alt="springInitializr">
+                <img src="../imagens/msgSpring.png" alt="springInitializr">
                 Se aparecer essa mensagem é pq está tudo ok!
             </p>
         </div>
