--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main class="principal">
         <button><a href="php.html">PHP</a></button>
-        <button><a href="terminal.html">Terminal</a></button>
+        <button><a href="htmlcss.html">HTML & CSS</a></button>
         <button><a href="git.html">Git/Github</a></button>
         <button><a href="node.html">Node</a></button>
         <button><a href="vscode.html">VS-Code</a></button>
@@ -24,12 +24,12 @@
                     <h3>modulo 01 | Java-Básico</h3>
                     <ul>
                         <li>
-                            <a href="conceitos_basico.html">
+                            <a href="basico/conceitos_basico.html">
                                 Scanner & Locale
                             </a>
                         </li>
                         <li>
-                            <a href="forech.html">
+                            <a href="basico/forech.html">
                                 Forech
                             </a>
                         </li>
@@ -38,10 +38,10 @@
                 <div class="modulo vermelho">
                     <h3>modulo 02 | DSCatalog-JAVA</h3>
                     <ul>
-                        <li><a href="criandoProjeto.html">Criando-Projeto</a></li>
-                        <li><a href="entidades.html">Classe Category</B></a></li>
-                        <li><a href="camadas.html">Estrutura de camadas</B></a></li>
-                        <li><a href="bancoH2.html">Banco de dados H2</B></a></li>
+                        <li><a href="dscatalog/criandoProjeto.html">Criando-Projeto</a></li>
+                        <li><a href="dscatalog/entidades.html">Classe Category</B></a></li>
+                        <li><a href="dscatalog/camadas.html">Estrutura de camadas</B></a></li>
+                        <li><a href="dscatalog/bancoH2.html">Banco de dados H2</B></a></li>
                     </ul>
                 </div>
                 <div class="modulo azul">
