--- a/modelo.html
+++ b/modelo.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets\css\estilo.css">
-    <link rel="stylesheet" href="assets\css\exercicio.css">
+    <link rel="stylesheet" href="../assets/css/estilo.css">
+    <link rel="stylesheet" href="../assets/css/exercicio.css">
     <title>Exercício</title>
 </head>
 <body class="exercicio">
@@ -14,33 +14,12 @@
     </header> 
     <nav class="navegacao">
         <a href="#" class="verde">Sem Formatação</a>
-        <a href="index.html" class="vermelho">Voltar</a>
+        <a href="../index.html" class="vermelho">Voltar</a>
     </nav> 
     <main class="principal">
         <div class="conteudo">
 
             <div class="titulo">Scanner & Locale</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            
 
         </div>
     </main>
