implementando modulo java básico

--- a/index.html
+++ b/index.html
@@ -24,26 +24,38 @@
                     <h3>modulo 01 | Java-Básico</h3>
                     <ul>
                         <li>
-                            <a href="basico/conceitos_basico.html">
-                                Scanner & Locale
+                            <a href="basico/exemploDidatico.html">
+                                Usando Eclipse
                             </a>
                         </li>
                         <li>
+                            <a href="basico/conceitosBasicos.html">
+                                Conceitos Básicos
+                            </a>
+                        </li>
+                        <li>
+                            <a href="basico/conceitoBasicoParte02.html">
+                                Conceitos Básicos Parte 02
+                            </a>
+                        </li>
+
+                        <!--<li>
                             <a href="basico/forech.html">
                                 Forech
                             </a>
-                        </li>
+                        </li>-->
+
                     </ul>
                 </div>
-                <div class="modulo vermelho">
-                    <h3>modulo 02 | DSCatalog-JAVA</h3>
+                <div class="modulo roxo-escuro">
+                    <h3>modulo 02 - Básico</h3>
                     <ul>
-                        <li><a href="dscatalog/criandoProjeto.html">Criando-Projeto</a></li>
-                        <li><a href="dscatalog/entidades.html">Classe Category</B></a></li>
-                        <li><a href="dscatalog/camadas.html">Estrutura de camadas</B></a></li>
-                        <li><a href="dscatalog/bancoH2.html">Banco de dados H2</B></a></li>
+                        <li><a href="#">Exercício A</a></li>
+                        <li><a href="#">Exercício B</B></a></li>
+                        <li><a href="#">Exercício C</a></li>
                     </ul>
                 </div>
+
                 <div class="modulo azul">
                     <h3>modulo 03 - Básico</h3>
                     <ul>
@@ -91,12 +103,14 @@
                         <li><a href="#">Exercício B</B></a></li>
                         <li><a href="#">Exercício C</a></li>
                     </ul>
-                </div>  <div class="modulo roxo-escuro">
-                    <h3>modulo 09 - Básico</h3>
+                </div> 
+                <div class="modulo vermelho">
+                    <h3>modulo 09 | DSCatalog-JAVA</h3>
                     <ul>
-                        <li><a href="#">Exercício A</a></li>
-                        <li><a href="#">Exercício B</B></a></li>
-                        <li><a href="#">Exercício C</a></li>
+                        <li><a href="dscatalog/criandoProjeto.html">Criando-Projeto</a></li>
+                        <li><a href="dscatalog/entidades.html">Classe Category</B></a></li>
+                        <li><a href="dscatalog/camadas.html">Estrutura de camadas</B></a></li>
+                        <li><a href="dscatalog/bancoH2.html">Banco de dados H2</B></a></li>
                     </ul>
                 </div>
             </nav>
