inserindo página de estrutura condicional

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
                                 Conceitos Básicos Parte 02
                             </a>
                         </li>
+                        <li>
+                            <a href="basico/estruturaCondicional.html">
+                                Estrutura condicional
+                            </a>
+                        </li>
 
                         <!--<li>
                             <a href="basico/forech.html">
