Introdução ao poo

--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
                     </ul>
                 </div>
                 <div class="modulo roxo-escuro">
-                    <h3>modulo 02 - Básico</h3>
+                    <h3>modulo 02 - POO</h3>
                     <ul>
-                        <li><a href="#">Exercício A</a></li>
-                        <li><a href="#">Exercício B</B></a></li>
-                        <li><a href="#">Exercício C</a></li>
+                        <li>
+                            <a href="poo/introducao.html">
+                                Introdução POO
+                            </a>
+                        </li>
                     </ul>
                 </div>
 
