--- a/index.html
+++ b/index.html
@@ -64,11 +64,14 @@
                 </div>
 
                 <div class="modulo azul">
-                    <h3>modulo 03 - Básico</h3>
+                    <h3>modulo 03 - Classes Pré Definidas Java</h3>
                     <ul>
-                        <li><a href="#">Exercício A</a></li>
-                        <li><a href="#">Exercício B</B></a></li>
-                        <li><a href="#">Exercício C</a></li>
+                        <li>
+                            <a href="classesPreDefinidas/Object.html">
+                                Object
+                            </a>
+                        </li>
+
                     </ul>
                 </div>
                 <div class="modulo roxo">
