--- a/index.html
+++ b/index.html
@@ -75,11 +75,18 @@
                     </ul>
                 </div>
                 <div class="modulo roxo">
-                    <h3>modulo 04 - Básico</h3>
+                    <h3>modulo 04 -DSCommerce</h3>
                     <ul>
-                        <li><a href="#">Exercício A</a></li>
-                        <li><a href="#">Exercício B</B></a></li>
-                        <li><a href="#">Exercício C</a></li>
+                        <li>
+                            <a href="DSCommerce/CriandoProjeto.html">
+                                Criando-Projeto
+                            </a>
+                        </li>
+                        <li>
+                            <a href="DSCommerce/Order.html">
+                                Order,Enum e relacionamento muitos-para-um
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="modulo laranja">
