--- a/index.html
+++ b/index.html
@@ -83,8 +83,34 @@
                             </a>
                         </li>
                         <li>
+                            <a href="DSCommerce/annotetions.html">
+                               @Annotetions do Spring boot
+                            </a>
+                        </li>
+                        <li>
                             <a href="DSCommerce/Order.html">
-                                Order,Enum e relacionamento muitos-para-um
+                                Order class
+                            </a>
+                        </li>
+                        <li>
+                            <a href="DSCommerce/umparaum.html">
+                                relacionamento um para um (Classes Payment & Order)
+                            </a>
+                        </li>
+                        <li>
+                            <a href="DSCommerce/muitosparamuitos.html">
+                                relacionamento muitos para muitos (Classes Product & Category)
+                            </a>
+                        </li>
+                        <li>
+                            <a href="DSCommerce/classeAssociacao.html">
+                                Classe de associação
+                            </a>
+                        </li>
+                        
+                        <li>
+                            <a href="DSCommerce/importSQL.html">
+                                Import SQL
                             </a>
                         </li>
                     </ul>
